--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 "textgods":"GodsTeam 2.0",
 
-"usuario":"Jato97k",
+"usuario":"Jato98k",
 
-"senha":"82010403262",
+"senha":"h4x2diastrial",
 
 "botaodimas":"onlinek",
 
