--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 "criador":"Criado Por Jato v1.92.X",
 
-"codigodesban":"R3JpYWxWaXBNb2Rzc3o=",
+"codigodesban":"QmFzZTY0S2tra2tFeGF0",
 
 "titlevip":"Desban VIP",
 
