--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 "titulotrial":"Código vip do site",
 
-"text1":"Está versão desbane na hora, e funcionará durante algum tempo, seja rápido e pegue o código antes que acabe.\n\n⚠️Veja o tutorial para saber como pegar o código atualizado sem erros.\nCodigo restantes: 163 (Vips)\n\nUtilize o código que pegou no site abaixo👇",
+"text1":"Está versão desbane na hora, e funcionará durante algum tempo, seja rápido e pegue o código antes que acabe.\n\n⚠️Veja o tutorial para saber como pegar o código atualizado sem erros.\nCodigo restantes: 3200 (Vips)\n\nUtilize o código que pegou no site abaixo👇",
 
 "text2":"Quando você pegar o código você utiliza aqui, seja muito rápido. pós acaba rápido!!!",
 
@@ -98,7 +98,7 @@
 
 "criador":"Criado Por Jato v1.92.X",
 
-"codigodesban":"QmFzZTY0S2tra2tFeGF0",
+"codigodesban":"MzIwMENvZGlnb1ZpcHM=",
 
 "titlevip":"Desban VIP",
 
