--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 "versao":"2.0",
 
-"toast":"Galera Entrem no grupo do telegram para receber as atualizações por lá.\nGrupo: https://t.me/jatodoshackersgrupo <--",
+"toast":"Galera Entrem no grupo do telegram para receber as atualizações por lá.\nGrupo: https://t.me/jatodoshackersgrupo <--\n\nVeja como pegar o código vip e ativar:\n👉https://youtu.be/6CkCHbFpDeU\n\nSite para pegar o código vip:\nhttps://www.dicasfinanceiras.online/p/confira-as-vantagens-do-financiamento.html",
 
 "cor":"#FF0000",
 
