--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 "textreduz":"Reduzindo, aguarde...",
 
-"trialvip":"triall",
+"trialvip":"trial",
 
 "versionff":"Versão v1.92.10",
 
@@ -80,9 +80,9 @@
 
 "titulotrial":"Código vip do site",
 
-"text1":"Está versão desbane na hora, e funcionará durante algum tempo, seja rápido e pegue o código antes que acabe.\n\n⚠️Veja o tutorial para saber como pegar o código atualizado sem erros.\nCodigo restantes: 3200 (Vips)\n\nUtilize o código que pegou no site abaixo👇",
+"text1":"Está versão desbane na hora, e funcionará durante algum tempo, seja rápido e pegue o código antes que acabe.\n\n⚠️Veja o tutorial para saber como pegar o código atualizado sem erros.\n👉 Codigos restantes: 3200 (Vips)\n\nUtilize o código que pegou no site abaixo👇",
 
-"text2":"Quando você pegar o código você utiliza aqui, seja muito rápido. pós acaba rápido!!!",
+"text2":"Não funcionou? talvez esteja desativado, veja o vídeo para ativar o codigo sem erros!",
 
 "botaoneutrodesban":"",
 
@@ -100,13 +100,13 @@
 
 "codigodesban":"MzIwMENvZGlnb1ZpcHM=",
 
-"titlevip":"Desban VIP",
+"titlevip":"Desbanir em 1 minuto",
 
 "messagevip":"Quer desbanir sua conta mais rápida e com um preço justo?\nChame no whatsapp para adquirir a versão vip.\nSua conta volta em menos de 1 minuto\n\n🎉 Está tendo uma promoção, aproveite pós irá acabar esse mês!\n\nSe for pedir a versão vip de graça você será bloqueado da versão grátis, não chame atoa!",
 
 "codigovip":"CoçadorDeOvoEORato",
 
-"coderrorvip":"⚠️ CÓDIGO VIP INVÁLIDO!\n↪️ ADQUIRA O SEU !",
+"coderrorvip":"⚠️ CÓDIGO VIP INVÁLIDO!\n↪️ O CÓDIGO ESTÁ DESATIVADO, VEJA O VÍDEO PARA ATIVAR!",
 
 "toastfreeinvalid":"TEXTO INVÁLIDO! PROCURE NO SITE!!",
 
