--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 "versao":"2.0",
 
-"toast":"Galera Entrem no grupo do telegram para receber as atualizações por lá.\nGrupo: https://t.me/jatodoshackersgrupo <--\n\nVeja como pegar o código vip e ativar:\n👉https://youtu.be/6CkCHbFpDeU\n\nSite para pegar o código vip:\nhttps://www.dicasfinanceiras.online/p/confira-as-vantagens-do-financiamento.html",
+"toast":"Galera Entrem no grupo do telegram para receber as atualizações por lá.\nGrupo: https://t.me/jatodoshackersgrupo <--",
 
 "cor":"#FF0000",
 
@@ -72,7 +72,7 @@
 
 "textreduz":"Reduzindo, aguarde...",
 
-"trialvip":"trial",
+"trialvip":"triall",
 
 "versionff":"Versão v1.92.10",
 
@@ -106,7 +106,7 @@
 
 "codigovip":"CoçadorDeOvoEORato",
 
-"coderrorvip":"⚠️ CÓDIGO VIP INVÁLIDO!\n↪️ O CÓDIGO ESTÁ DESATIVADO, VEJA O VÍDEO PARA ATIVAR!",
+"coderrorvip":"⚠️ CÓDIGO VIP INVÁLIDO!\n↪️ ADQUIRA O SEU!",
 
 "toastfreeinvalid":"TEXTO INVÁLIDO! PROCURE NO SITE!!",
 
