--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 "cancelar":"",
 
-"linkronaldo":"https://youtu.be/-4l4G_XG9jg",
+"linkronaldo":"https://youtu.be/n67ijixdklQ",
 
 "toastvideo":"O DOWNLOAD ESTÁ NÓS COMENTÁRIOS"
 
