--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 {
 
-"versao":"2.0",
+"versao":"1.0",
 
 "toast":"Galera Entrem no grupo do telegram para receber as atualizações por lá.\nGrupo: https://t.me/jatodoshackersgrupo <--",
 
@@ -148,7 +148,7 @@
 
 "linkwhats2":"https://wa.me/5581988427578?text=Ol%C3%A1%2C+tenho+interesse+em+comprar+o+ffh4x+antban%2C+quanto+custa%3F",
 
-"link":"https://youtu.be/kaj6n5AJ6x0",
+"link":"https://youtu.be/VBuxEU1PMJg",
 
 "avisodata":"Opa, tudo bem?\nCompartilhe o canal para ajudar 👇",
 
@@ -158,11 +158,11 @@
 
 "aviso":"\u003cb\u003eAviso \u003cfont color\u003d\"#FF0000\"\u003e\u003cins\u003e\u003c/ins\u003e",
 
-"mensagem":"\u003cb\u003eINSCREVA-SE PARA MAIS MOD MENUS ATUALIZADO!\u003c/b\u003e\u003cfont color\u003d\u0027#FF0000\u0027\u003e\u003cbr\u003e\u003cbr\u003e\u003cb\u003eLEVOU BAN? RECUPERE AGORA!\u003c/font\u003e",
+"mensagem":"\u003cfont color\u003d\"#000000\"\u003eNOVA  ATUALIZAÇÃO! ATUALIZE PARA A VERSÃO V82, VERSÃO BRUTAL\u003cbr\u003e\u003cbr\u003eO download está nós comentários fixado do vídeo novo.\u003cbr\u003e\u003cbr\u003eEnglish:\u003cbr\u003eNEW UPDATE! UPDATE TO VERSION V82.\u003cbr\u003e\u003cbr\u003eDownload is in the new video comment.\u003c/font\u003e",
 
-"ok":"ok",
+"ok":"",
 
-"cancelar":"",
+"cancelar":"\u003cfont color\u003d\"#FF0000\"\u003e\u003cb\u003eok\u003c/b\u003e",
 
 "linkronaldo":"https://youtu.be/n67ijixdklQ",
 
