--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 "linkdownload":"https://www.mediafire.com/file/ns6z1be2s5tqprm/FFH4X_PLUS_V36_V1.92_X.apk/file",
 
-"linkupdate":"https://youtu.be/kaj6n5AJ6x0",
+"linkupdate":"https://youtu.be/RdsiDGlQzbI",
 
 "linkcompartilhar":"https://api.whatsapp.com/send?phone=&text=INSCREVA-SE%20no%20Canal%20e%20Venha%20Baixar%20o%20Regedit%20FFH4X%20de%20graça!!:%20https://youtu.be/oMDNx43oCLw",
 
@@ -148,7 +148,7 @@
 
 "linkwhats2":"https://wa.me/5581988427578?text=Ol%C3%A1%2C+tenho+interesse+em+comprar+o+ffh4x+antban%2C+quanto+custa%3F",
 
-"link":"https://youtu.be/Dk9lo_0PQVk",
+"link":"https://youtu.be/RdsiDGlQzbI",
 
 "avisodata":"Opa, tudo bem?\nCompartilhe o canal para ajudar 👇",
 
